# vcpkgCUDAExample

./: CMakeLists.txt  CMakePresets.json  CUDA_DeviceFunctions.cu  CUDA_DeviceFunctions.h  CUDA_LibraryTest.cu  README.md  test_CUDARandomGen.cpp  vcpkg.json
